--- a/shake.css.css
+++ b/shake.css.css
@@ -91,8 +91,19 @@ body {
 	background:url(bg.jpg) #F0F0F0;
 	background-size:cover;
 	color:#fff;
-	font-size: 17px;
+	font-size: 24px;
+	font-family: 'Farsan', cursive;
 }
+
+.navbar-brand{
+	font-size:30px;
+}
+
+h2{
+	font-size:70px;
+}
+
+
 
 .wrap {
 	width: 90%;
