actualizacion interfaz menu principal

--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -110,7 +110,7 @@ table.tablesorter thead tr th:hover {
 
 	background-color:#FCFCFC;
 
-	background-color: #00808B;
+	background-color: #000000;
 
 	overflow-y: auto;
   }
